--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,9 +14,6 @@
     <meta name="author" content="Hoffman's Reptile Shop" />
     <meta name="robots" content="index, follow" />
 
-    <!-- Google Site Verification -->
-    <meta name="google-site-verification" content="OPmlDIv4oCX1O0eNx3wNP7K-rHuVcF5NJnMxXJw0Jc4" />
-
     <!-- Open Graph (OG) Meta Tags for Social Sharing -->
     <meta property="og:title" content="Hoffman's Reptile Shop - Exotic Reptiles in Concord, CA" />
     <meta property="og:description" content="Visit Hoffman's Reptile Shop for exotic reptiles, snakes, lizards, turtles, and pet supplies in Concord, CA." />
@@ -51,7 +48,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/home">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/home">HOME</a></li>
                     <li class="nav-item"><a class="nav-link" href="/animals">ANIMALS</a></li>
                     <li class="nav-item"><a class="nav-link" href="/gallery">GALLERY</a></li>
                     <li class="nav-item"><a class="nav-link" href="/about">ABOUT US</a></li>
