Recreated animals.ejs page

--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -139,7 +139,7 @@
             <img src="/images/chubby_frog.png" alt="Animal 5" />
             <img src="/images/6.png" alt="Animal 6" />
             <img src="/images/7.png" alt="Animal 7" />
-            <img src="/images/8.png" alt="Animal 8" />
+            <img src="/images/asian_water_monitor_baby.png" alt="Animal 8" />
         </div>
     </section>
 
