--- a/views/mainGallery.ejs
+++ b/views/mainGallery.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Gallery - Hoffman's Reptile Shop</title>
 
-    <link rel="icon" type="image/png" href="/Images/Logo.png" />
+    <link rel="icon" type="image/png" href="/images/Logo.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
@@ -32,7 +32,7 @@
         .hero {
             width: 100%;
             height: 60vh;
-            background: url('/Images/hero_image_gallery.png') no-repeat center center;
+            background: url('/images/hero_image_gallery.png') no-repeat center center;
             background-size: cover;
             display: flex;
             align-items: center;
@@ -97,7 +97,7 @@
     <nav class="navbar navbar-expand-md fixed-top shadow-lg">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="/home">
-                <img src="/Images/Logo.png" alt="Logo" height="40" class="me-2" />
+                <img src="/images/Logo.png" alt="Logo" height="40" class="me-2" />
                 <span>Hoffman's Reptile Shop</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
