--- a/views/mainGallery.ejs
+++ b/views/mainGallery.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Gallery - Hoffman's Reptile Shop</title>
 
-    <link rel="icon" type="image/png" href="/images/Logo.png" />
+    <link rel="icon" type="image/png" href="/Images/Logo.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
@@ -32,7 +32,7 @@
         .hero {
             width: 100%;
             height: 60vh;
-            background: url('/images/hero_image_gallery.png') no-repeat center center;
+            background: url('/Images/hero_image_gallery.png') no-repeat center center;
             background-size: cover;
             display: flex;
             align-items: center;
@@ -97,7 +97,7 @@
     <nav class="navbar navbar-expand-md fixed-top shadow-lg">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="/home">
-                <img src="/images/Logo.png" alt="Logo" height="40" class="me-2" />
+                <img src="/Images/Logo.png" alt="Logo" height="40" class="me-2" />
                 <span>Hoffman's Reptile Shop</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -132,14 +132,14 @@
     <!-- Image Grid -->
     <section class="image-grid-section">
         <div class="image-grid">
-            <img src="/images/1.png" alt="Animal 1" />
-            <img src="/images/2.png" alt="Animal 2" />
-            <img src="/images/3.png" alt="Animal 3" />
-            <img src="/images/baby_blue_iguana.png" alt="Animal 4" />
-            <img src="/images/chubby_frog.png" alt="Animal 5" />
-            <img src="/images/6.png" alt="Animal 6" />
-            <img src="/images/7.png" alt="Animal 7" />
-            <img src="/images/asian_water_monitor_baby.png" alt="Animal 8" />
+            <img src="/Images/1.png" alt="Animal 1" />
+            <img src="/Images/2.png" alt="Animal 2" />
+            <img src="/Images/3.png" alt="Animal 3" />
+            <img src="/Images/baby_blue_iguana.png" alt="Animal 4" />
+            <img src="/Images/chubby_frog.png" alt="Animal 5" />
+            <img src="/Images/6.png" alt="Animal 6" />
+            <img src="/Images/7.png" alt="Animal 7" />
+            <img src="/Images/asian_water_monitor_baby.png" alt="Animal 8" />
         </div>
     </section>
 
